5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1708_3033.log
== TEST (2019-04-29 14:27:34) 
-- CODE:
x=float(input("valor de x"))
if(x>= -100) and (x<0):
	print(-1/x)
else:
	if(x>0)and(x<=100):
		print(1/x)
	else:
		print("entrada invalida")
-- OUTPUT:
0.010869565217391304
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:44) 
-- CODE:
x=float(input("valor de x: ")
if(x>= -100) and (x<0):
	print(-1/x)
else:
	if(x>0)and(x<=100):
		print(1/x)
	else:
		print("entrada invalida")
-- ERROR:
File "XXXX", line 2
    if(x>= -100) and (x<0):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:48) 
-- CODE:
x=float(input("valor de x: ")
if(x>= -100) and (x<0):
	print(-1/x)
else:
	if(x>0)and(x<=100):
		print(1/x)
	else:
		print("entrada invalida")
-- ERROR:
File "XXXX", line 2
    if(x>= -100) and (x<0):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:30:03) 
-- CODE:
x=float(input("valor de x: ")
if(x>= 100) and (x<0):
	y=(1/x)*-1
else:
	if(x>0)and(x<=100):
		y=(1/x)
	else:
		print("entrada invalida")
print(round(y,4))
-- ERROR:
File "XXXX", line 2
    if(x>= 100) and (x<0):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:30:22) 
-- CODE:
x=float(input("valor de x: ")
if(x>=100)and(x<0):
	y=(1/x)*-1
else:
	if(x>0)and(x<=100):
		y=(1/x)
	else:
		print("entrada invalida")
print(round(y,4))
-- ERROR:
File "XXXX", line 2
    if(x>=100)and(x<0):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:31:40) 
-- CODE:
x=float(input("valor de x: ")
if(x>=100*-1)and(x<0):
	y=(1/x)*-1
else:
	if(x>0)and(x<=100):
		y=(1/x)
	else:
		print("entrada invalida")
print(round(y,4))
-- ERROR:
File "XXXX", line 2
    if(x>=100*-1)and(x<0):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:30) 
-- CODE:
x=float(input("valor de x: ")
if not(x>0)and(x<=100)
	y=(1/x)*-1
else:
	if(x>0)and(x<=100):
		y=(1/x)
	else:
		print("entrada invalida")
print(round(y,4))
-- ERROR:
File "XXXX", line 3
    y=(1/x)*-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:34:21) 
-- CODE:
x=float(input("valor de x: ")
if not(x>0)and(x<=100)
	y=(1/x)*(0-1)
else:
	if(x>0)and(x<=100):
		y=(1/x)
	else:
		print("entrada invalida")
print(round(y,4))
-- ERROR:
File "XXXX", line 3
    y=(1/x)*(0-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:42) 
-- CODE:
x=float(input("valor de x: ")
if(x>0)and(x<=100):
		  y=1/x
else:
		if(x<=(100*-1))and(x<0)
		  y=(1/x)*-1
		  print(round(y,4))
		 else:
		  print("entrada invalida")
		
-- ERROR:
File "XXXX", line 2
    if(x>0)and(x<=100):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:04) 
-- CODE:
x=float(input("valor de x: ")
if(x>0)and(x<=100):
		  y=1/x
else:
		if(x<=(100*-1))and(x<0)
		  y=(1/x)*-1
print(round(y,4))
		 else:
		  print("entrada invalida")
		
-- ERROR:
File "XXXX", line 2
    if(x>0)and(x<=100):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:21) 
-- CODE:
x=float(input("valor de x: ")
if(x>0)and(x<=100):
		  y=1/x
		  print(round(y,4))
else:
		if(x<=(100*-1))and(x<0)
		  y=(1/x)*-1
		print(round(y,4))
		 else:
		  print("entrada invalida")
		
-- ERROR:
File "XXXX", line 2
    if(x>0)and(x<=100):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
